--- a/automation_deliveries_master/Bundle.config
+++ b/automation_deliveries_master/Bundle.config
@@ -3,5 +3,9 @@
   <styleBundle path="~/Content/css">
     <include path="~/Content/bootstrap.css" />
     <include path="~/Content/Site.css" />
+
+    <include path="~/Content/main.css" />
+    <include path="~/Content/font-style.css" />
+    <include path="~/Content/flexslider.css" />
   </styleBundle>
 </bundles>
