--- a/automation_deliveries/automation_deliveries.csproj
+++ b/automation_deliveries/automation_deliveries.csproj
@@ -165,9 +165,8 @@
     <Content Include="Account\SignOut.aspx" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\sb-admin-2.css" />
-    <Content Include="Content\sb-admin-2.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="Realizadas.aspx" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
@@ -238,6 +237,13 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\StartupAuth.cs" />
     <Compile Include="ConexaoBancoSQL.cs" />
+    <Compile Include="Realizadas.aspx.cs">
+      <DependentUpon>Realizadas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Realizadas.aspx.designer.cs">
+      <DependentUpon>Realizadas.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
