Modulo de Entregas om novo login

--- a/deliv/Web.config
+++ b/deliv/Web.config
@@ -4,7 +4,6 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
@@ -14,17 +13,17 @@
       </namespaces>
       <controls>
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
-      <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit" /></controls>
+      </controls>
     </pages>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
-
+    
     <!-- Página de Erro Default-->
     <customErrors mode="RemoteOnly" defaultRedirect="ErroDefault.aspx" />
 
   </system.web>
-
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
