Registro de Geolocalização

--- a/deliv/Web.config
+++ b/deliv/Web.config
@@ -19,8 +19,8 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
     
-    <!-- Página de Erro Default-->
-    <customErrors mode="RemoteOnly" defaultRedirect="ErroDefault.aspx" />
+    <!-- Se ocorrer algum erro, vai para página de login -->
+    <customErrors mode="RemoteOnly" defaultRedirect="Default.aspx" />
 
   </system.web>
   
