--- a/delivcli/delivcli.csproj
+++ b/delivcli/delivcli.csproj
@@ -158,6 +158,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="Properties\PublishProfiles\delivcli.pubxml" />
+    <None Include="Properties\PublishProfiles\logcli.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Mapa.aspx" />
     <Content Include="Mapa1.aspx" />
