Geocoding e Marcadores - resultados diferentes com virgulas e pontos

--- a/delivcli/delivcli.csproj
+++ b/delivcli/delivcli.csproj
@@ -159,6 +159,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="Properties\PublishProfiles\delivcli.pubxml" />
+    <None Include="Properties\PublishProfiles\logcli - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\logcli.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="images\motorbike24.png" />
