--- a/delivcli/delivcli.csproj
+++ b/delivcli/delivcli.csproj
@@ -170,7 +170,10 @@
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="images\motorbike24.png" />
     <Content Include="images\status_on.png" />
+    <Content Include="Relatorio2.aspx" />
+    <Content Include="Relatorio1.aspx" />
     <Content Include="Mapa.aspx" />
+    <Content Include="DetalhesEntrega.aspx" />
     <Content Include="Mapa2.aspx" />
     <Content Include="Mapa1.aspx" />
     <Content Include="Painel.aspx" />
@@ -283,12 +286,33 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Relatorio2.aspx.cs">
+      <DependentUpon>Relatorio2.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Relatorio2.aspx.designer.cs">
+      <DependentUpon>Relatorio2.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Relatorio1.aspx.cs">
+      <DependentUpon>Relatorio1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Relatorio1.aspx.designer.cs">
+      <DependentUpon>Relatorio1.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Mapa.aspx.cs">
       <DependentUpon>Mapa.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Mapa.aspx.designer.cs">
       <DependentUpon>Mapa.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="DetalhesEntrega.aspx.cs">
+      <DependentUpon>DetalhesEntrega.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="DetalhesEntrega.aspx.designer.cs">
+      <DependentUpon>DetalhesEntrega.aspx</DependentUpon>
     </Compile>
     <Compile Include="Mapa2.aspx.cs">
       <DependentUpon>Mapa2.aspx</DependentUpon>
