--- a/delivcli/delivcli.csproj
+++ b/delivcli/delivcli.csproj
@@ -155,6 +155,7 @@
     <Content Include="images\flagOk.png" />
     <Content Include="images\flagRetorno.png" />
     <Content Include="ListagemEntregas.aspx" />
+    <Content Include="DetalhesStatus.aspx" />
     <Content Include="ListagemStatus.aspx" />
     <Content Include="ErroDefault.aspx" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -170,6 +171,7 @@
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="images\motorbike24.png" />
     <Content Include="images\status_on.png" />
+    <Content Include="DetalhesMapa.aspx" />
     <Content Include="Relatorio2.aspx" />
     <Content Include="Relatorio1.aspx" />
     <Content Include="Mapa.aspx" />
@@ -262,6 +264,13 @@
     <Compile Include="ListagemEntregas.aspx.designer.cs">
       <DependentUpon>ListagemEntregas.aspx</DependentUpon>
     </Compile>
+    <Compile Include="DetalhesStatus.aspx.cs">
+      <DependentUpon>DetalhesStatus.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="DetalhesStatus.aspx.designer.cs">
+      <DependentUpon>DetalhesStatus.aspx</DependentUpon>
+    </Compile>
     <Compile Include="ListagemStatus.aspx.cs">
       <DependentUpon>ListagemStatus.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -285,6 +294,13 @@
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="DetalhesMapa.aspx.cs">
+      <DependentUpon>DetalhesMapa.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="DetalhesMapa.aspx.designer.cs">
+      <DependentUpon>DetalhesMapa.aspx</DependentUpon>
     </Compile>
     <Compile Include="Relatorio2.aspx.cs">
       <DependentUpon>Relatorio2.aspx</DependentUpon>
