--- a/delivcli/delivcli.csproj
+++ b/delivcli/delivcli.csproj
@@ -167,6 +167,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="ClassDiagram1.cd" />
     <None Include="Properties\PublishProfiles\delivcli.pubxml" />
     <None Include="Properties\PublishProfiles\logcli - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\logcli.pubxml" />
