--- a/delivcli/delivcli.csproj
+++ b/delivcli/delivcli.csproj
@@ -172,6 +172,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="ClassDiagram1.cd" />
+    <Content Include="WebService1.asmx" />
     <None Include="Properties\PublishProfiles\logcli - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\logcliente - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\logcliente - Web Deploy.pubxml" />
@@ -431,6 +432,10 @@
     </Compile>
     <Compile Include="ViewSwitcher.ascx.designer.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="WebService1.asmx.cs">
+      <DependentUpon>WebService1.asmx</DependentUpon>
+      <SubType>Component</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
