--- a/PainelDeControle/packages.config
+++ b/PainelDeControle/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="iTextSharp" version="5.5.12" targetFramework="net452" />
+  <package id="iTextSharp-LGPL" version="4.1.6" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
 </packages>
