--- a/delivcli/Web.config
+++ b/delivcli/Web.config
@@ -20,7 +20,7 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
 
-    <customErrors mode="Off" />
+    <customErrors mode="RemoteOnly" defaultRedirect="ErroDefault.aspx" />
     
   </system.web>
 
